--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,3 +1,7 @@
+@font-face{
+    font-family: "Bellota";
+    src: url("/assets/font/Bellota-Regular.otf") format("truetype");
+}
 body{
-    background-color: red;
+    font-family: "Bellota";
 }
