--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,3 +1,6 @@
+@import 'header';
+@import 'presentation';
+
 @font-face{
     font-family: "Bellota";
     src: url("/assets/font/Bellota-Regular.otf") format("truetype");
