--- a/assets/sass/_form.scss
+++ b/assets/sass/_form.scss
@@ -1,21 +1,28 @@
-$back-color:#303030;
-$colorText:#15C5BD;
+$back-color: #303030;
+$colorText: #15c5bd;
 
-
-form{
-    background-color:$back-color;
-    color:$colorText;
-    border-radius: 35px;
-    .btn{
-
-        background-color: $back-color;
-        color: $colorText;
-        border-color: $colorText;
-    }
-    hr{
-        border-color: white;
-    }
-    .divSexType{
-        margin-left: 17%;
-    }
+form {
+  background-color: $back-color;
+  color: $colorText;
+  border-radius: 35px;
+  .btn {
+    background-color: $back-color;
+    color: $colorText;
+    border-color: $colorText;
+  }
+  hr {
+    border-color: white;
+  }
+  .divSexType {
+    margin-left: 17%;
+  }
+  .ohnohoney {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 0;
+    width: 0;
+    z-index: -1;
+  }
 }
