--- a/assets/sass/_featured.scss
+++ b/assets/sass/_featured.scss
@@ -1,11 +1,14 @@
-#featured , #gaming , #cluster{
-    font-family: "Bellota" !important;
-    margin-bottom: 5em;
-    h2{
-        margin-bottom: 2em;
-    }
-    .btn{
-        background-color: #15c5bd;
-        border-color: #15c5bd;
-    }
+#featured,
+#gaming,
+#cluster {
+  font-family: "Bellota" !important;
+  margin-bottom: 5em;
+  h2 {
+    margin-bottom: 2em;
+  }
+  .btn {
+    background-color: #303030;
+    color: #15c5bd;
+    border-color: #15c5bd;
+  }
 }
