--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -4,6 +4,12 @@ header {
   p {
     font-family: "Bellota" !important;
   }
+  a{
+    color:black;
+  }
+  a:hover{
+    color:#15c5bd;
+  }
 
   .navbar {
     img {
